HSEARCH-3485 Update the Maven profiles to also work with JDK12