@@ -1772,6 +1772,38 @@
         </profile>
 
         <profile>
+            <id>jdk12</id>
+            <activation>
+                <jdk>12</jdk>
+            </activation>
+            <properties>
+                <surefire.jvm.args.java-version.lenient>
+                    -Djdk.attach.allowAttachSelf=true
+                    -Dcom.sun.xml.bind.v2.bytecode.ClassTailor.noOptimize=true
+                </surefire.jvm.args.java-version.lenient>
+                <!--
+                     When we use illegal-access=deny,
+                     we have to open the java.lang package to EasyMock,
+                     because cglib (used by EasyMock) requires to execute setAccessible(true)
+                     on ClassLoader.defineClass(...).
+                     See https://github.com/easymock/easymock/issues/235
+                     See https://hibernate.atlassian.net/browse/HSEARCH-3419
+                 -->
+                <surefire.jvm.args.java-version.strict>
+                    ${surefire.jvm.args.java-version.lenient}
+                    --illegal-access=deny
+                    --add-opens java.base/java.lang=ALL-UNNAMED
+                </surefire.jvm.args.java-version.strict>
+                <arquillian.wildfly.jvm.args.java-version>
+                    -Djdk.attach.allowAttachSelf=true
+                </arquillian.wildfly.jvm.args.java-version>
+            </properties>
+            <modules>
+                <!-- Nothing at the moment -->
+            </modules>
+        </profile>
+
+        <profile>
             <id>perf</id>
             <properties>
                 <org.hibernate.search.enable_performance_tests>true</org.hibernate.search.enable_performance_tests>
